# libtgw

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_cfg.txt  build_matrix.sh  build_matrix_cfg.txt  stupid-matrix.txt
inc/: CMakeLists.txt  tgw_hdr_config.h.in  tgw_name_incr.h  tgw_src_config.h.in  tgw_utils.h
src/: CMakeLists.txt  tgw_name_incr.c  tgw_utils.c
stupid/: CMakeLists.txt  file.txt  gen_config.cpp  gen_config.h  gen_token_table.cpp  gen_token_table.h  run_command.cpp  run_command.h  string_utils.cpp  string_utils.h  stupid_common.cpp  stupid_common.h  stupid_gen_cmake.cpp  stupid_generate  stupid_generate.cpp  stupid_matrix.cpp  stupid_run.cpp  stupid_tree.cpp  stupid_tree.h  write_cmake.cpp  write_cmake.h
tests/: CMakeLists.txt  mk_stupid.sh  stupid-cfg.txt  stupid-list.txt  stupid.txt  test_build.cmake  test_list.txt  test_name_incr.c  test_name_incr.corr.txt  test_version_queries.c  test_version_queries.corr.txt
tests/fw/: tgw_test_fw.c  tgw_test_fw.h
tests/scripts/: generate_files.sh  run_tests.sh  test_config.txt
tests/sub1/: CMakeLists.txt  common.c  stupid.txt  sub_test_1.c  sub_test_2.cpp  sub_test_3.c  util.c
tests/test_sys_tests/: stupid.txt  test_diff.c  test_diff.corr.txt  test_mem_err.c  test_mem_ok.c  test_ok.c  test_rc.c  test_rc.corr.txt
tests/util/: helpers.sh  run_corr_test.sh  run_mem_test.sh  run_tests.sh.in
